After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710494 - Request after closed input stream fails
Request after closed input stream fails
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
2.44.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
: 710961 711842 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-10-19 05:25 UTC by Ross Lagerwall
Modified: 2013-11-15 15:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Triggers the bug (1.12 KB, text/x-csrc)
2013-10-19 05:25 UTC, Ross Lagerwall
Details

Description Ross Lagerwall 2013-10-19 05:25:24 UTC
Created attachment 257685 [details]
Triggers the bug

Since 96da2df64c9 (Fix soup_client_input_stream_close to not block), calling soup_session_send() after closing an input stream without reading the data fails.

I have attached an example which used to work and now it doesn't.
Comment 1 Dan Winship 2013-10-19 16:13:03 UTC
Thanks for the test case. Fixed in master, and will eventually be in
2.44.2
Comment 2 Dan Winship 2013-10-27 16:20:28 UTC
*** Bug 710961 has been marked as a duplicate of this bug. ***
Comment 3 Dan Winship 2013-11-15 15:55:58 UTC
*** Bug 711842 has been marked as a duplicate of this bug. ***