soup-message-io: fix early SoupClientInputStream close case

When closing the stream early, we should be skipping the read state
ahead to FINISHING, rather than BODY_DONE, so that got_body doesn't
get emitted (thus causing the connection to mark itself reusable).

https://bugzilla.gnome.org/show_bug.cgi?id=710494